--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Android_sdk_learning"
         tools:targetApi="31">
         <activity
+            android:name=".SecondActivity"
+            android:exported="false"
+            android:label="@string/title_activity_second"
+            android:theme="@style/Theme.Android_sdk_learning" />
+        <activity
+            android:name=".ui.theme.SecondActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Android_sdk_learning" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
